--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.3.2
   flutter_map: ^7.0.2
   flutter_speed_dial: ^7.0.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
